[tool.poetry]
name = "wuffwaucli"
version = "0.1.0"
description = ""
authors = ["pheonix8 <61965711+pheonix8@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pillow = "^9.3.0"
black = "^22.12.0"
rich = "^12.6.0"
typer = "^0.7.0"
shellingham = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
